unpackaged/main/default/objects/DutyIndicatorMetadata__mdt/DutyIndicatorMetadata__mdt.object-meta.xml
<CustomObject>
    <label>DutyIndicatorMetadata</label>
    <pluralLabel>DutyIndicatorMetadatas</pluralLabel>
</CustomObject>