unpackaged/main/default/objects/DutyIndicatorMetadata__mdt/fields/BodyType__c.field-meta.xml
<CustomField>
    <fullName>BodyType__c</fullName>
    <label>BodyType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cutaway Van</fullName>
                <default>true</default>
                <label>Cutaway Van</label>
            </value>
            <value>
                <fullName>Cab &amp; Chassis</fullName>
            </value>
            <value>
                <fullName>Stripped Chassis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>