unpackaged/main/default/objects/DutyIndicatorMetadata__mdt/fields/Duty_Indicator_Value__c.field-meta.xml
<CustomField>
    <fullName>Duty_Indicator_Value__c</fullName>
    <label>Duty Indicator Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
                <default>true</default>
                <label>L</label>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>