unpackaged/main/default/objects/DutyIndicatorMetadata__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RV</fullName>
                <default>true</default>
                <label>RV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>