unpackaged/main/default/objects/DutyIndicatorMetadata__mdt/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>VehicleType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medium/Heavy Truck</fullName>
                <default>true</default>
                <label>Medium/Heavy Truck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>